--- a/web/assets/sass/queries/_smartphone.scss
+++ b/web/assets/sass/queries/_smartphone.scss
@@ -1,4 +1,7 @@
 @media (max-width: 400px) {
+  .AAAA{
+    height: 75px;
+  }
   #results {
     h1 {
       margin-top: 8%;
